--- a/APP.CMS/appsettings.json
+++ b/APP.CMS/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "connectionString": "Data Source=222.255.113.161;Database=defalut;User id=portal;Password=Bdntw@123456;Trusted_Connection=False;connect timeout=1000;Max Pool Size=5000"
+    "connectionString": "Data Source=222.255.113.161;Database=defalut;User id=linh;Password=linh@@123;Trusted_Connection=False;connect timeout=1000;Max Pool Size=5000"
   }
 }
