--- a/APP.CMS/appsettings.json
+++ b/APP.CMS/appsettings.json
@@ -7,10 +7,10 @@
     }
   },
   "AllowedHosts": "*",
-  //"ConnectionStrings": {
-  //  "connectionString": "Data Source=222.255.113.161;Database=defalut;User id=linh;Password=linh@@123;Trusted_Connection=False;connect timeout=1000;Max Pool Size=5000"
-  //}
   "ConnectionStrings": {
-    "connectionString": "Data Source=VANLINHPC\\SQLEXPRESS;Initial Catalog=qlsx;Integrated Security=True"
+    "connectionString": "Data Source=222.255.113.161;Database=defalut;User id=linh;Password=linh@@123;Trusted_Connection=False;connect timeout=1000;Max Pool Size=5000"
   }
+  //"ConnectionStrings": {
+   // "connectionString": "Data Source=VANLINHPC\\SQLEXPRESS;Initial Catalog=qlsx;Integrated Security=True"
+  //}
 }
